# rag-knowledge-base

./: .env.example  .gitignore  Dockerfile  LOCAL_SETUP.md  pyproject.toml  requirements.txt
src/: config.py  main.py  server.py
src/db/: neo4j.py
src/embeddings/: factory.py  gemini.py
src/knowledge/: md_splitter.py  pipeline.py  retriever.py  works_cited.py
src/markdown/: processor.py
src/pdf/: processor.py
src/tools/: query.py
src/watcher/: poller.py
tests/: conftest.py  test_config.py  test_main_stats.py  test_markdown_processor.py  test_pdf_processor.py  test_tools_query.py  test_watcher_poller.py
tests/integration/: conftest.py  test_full_flow.py  test_gemini_embeddings.py  test_johor_research_queries.py  test_knowledge_queries.py  test_pipeline.py  test_retriever.py
